force-app/main/default/objects/Exception__c/Exception__c.object-meta.xml
<CustomObject>
    <description>This Object is to capture the exception detail occurred in any apex code</description>
    <label>Exception</label>
    <nameField>
        <label>Exception Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>