force-app/main/default/objects/Exception__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Exception detail</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>