force-app/main/default/objects/Exception__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Description__c</columns>
    <columns>Class_Name__c</columns>
    <columns>Method_Name__c</columns>
    <columns>Line_No__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>